<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCategoryDialogTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addCategoryDialogTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addCategoryDialogTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addCategoryEnterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCategoryDialogTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/addCategoryTextEditTextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCategoryCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/addCategoryCancelButtonText"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addCategoryEnterButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryDialogTextInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCategoryEnterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCategoryEnterButtonText"
        app:cornerRadius="20dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/addCategoryCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCategoryCancelButton"
        app:layout_constraintTop_toTopOf="@+id/addCategoryCancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>