<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ResetPasswordFragment">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPwd_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/resetPwdButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.271">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPwTextInputLayoutEmail"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#00000000"
                    app:layout_constraintBottom_toTopOf="@+id/resetPwTextInputLayoutPw"
                    app:layout_constraintStart_toStartOf="@+id/resetPwTextInputLayoutPw"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.17000002">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/resetPwTextInputEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/resetPwd_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPwTextInputLayoutPw"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#00000000"
                    app:layout_constraintBottom_toTopOf="@+id/resetPwTextInputLayoutPwConfirm"
                    app:layout_constraintStart_toStartOf="@+id/resetPwTextInputLayoutPwConfirm"
                    app:layout_constraintTop_toBottomOf="@+id/resetPwTextInputLayoutEmail"
                    app:layout_constraintVertical_bias="0.17000002">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/resetPwTextInputEditTextPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/resetPwd_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPwTextInputLayoutPwConfirm"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#00000000"
                    app:layout_constraintBottom_toTopOf="@+id/resetPwTextInputLayoutCode"
                    app:layout_constraintStart_toStartOf="@+id/resetPwTextInputLayoutCode"
                    app:layout_constraintTop_toBottomOf="@+id/resetPwTextInputLayoutPw"
                    app:layout_constraintVertical_bias="0.17000002">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/resetPwTextInputEditTextPwConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/resetPwd_passwordConfirm" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPwTextInputLayoutCode"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#00000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/resetPwTextInputLayoutPwConfirm"
                    app:layout_constraintVertical_bias="0.17000002">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/resetPwTextInputEditTextCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/resetPwd_code" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetPwdGetCodeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:enabled="false"
                    android:text="@string/resetPwd_getCodeBtnText"
                    app:layout_constraintBottom_toBottomOf="@+id/resetPwTextInputLayoutCode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/resetPwTextInputLayoutCode"
                    app:layout_constraintTop_toTopOf="@+id/resetPwTextInputLayoutCode" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPwdButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/resetPwdBtn"
            app:cornerRadius="30dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.86" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>